log
Sun 08 Oct 2023 03:25:23 AM UTC: 
 tests:  0|4
total_score: 0/70
1c882b3
Sat 14 Oct 2023 09:30:48 PM UTC: 
 heap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:21: error: expected ‘;’ before ‘return’
   47 |   newHeap->capac = 3
      |                     ^
      |                     ;
   48 |   return newHeap;
      |   ~~~~~~             
heap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f434e0c
Sat 14 Oct 2023 09:30:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
56da289
Sat 14 Oct 2023 09:31:25 PM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|3
total_score: 10/70
f14a5fa
Sat 14 Oct 2023 09:31:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:35: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   40 |   newHeap->heapArray = (heapElem*)mlloc(3 * sizeof(heapElem));
      |                                   ^~~~~
      |                                   malloc
heap.c:40:24: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   40 |   newHeap->heapArray = (heapElem*)mlloc(3 * sizeof(heapElem));
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
d593b08
Sat 14 Oct 2023 09:31:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:24: error: expected expression before ‘heapElem’
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |                        ^~~~~~~~
heap.c:40:3: error: called object is not a function or function pointer
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |   ^~~~~~~
heap.c:40:34: error: expected ‘;’ before ‘malloc’
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |                                  ^~~~~~
      |                                  ;
Compilation failed
d6ea68c
Sat 14 Oct 2023 09:31:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d058420
Sat 14 Oct 2023 09:32:29 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:19: error: expected expression before ‘)’ token
   21 |   if (pq->size == ) {
      |                   ^
Compilation failed
f54d5c1
Sat 14 Oct 2023 09:32:36 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   24 |   return pq->heapArray[0]data;
      |          ~~~~~~~~~~~~~^~~
heap.c:24:26: error: expected ‘;’ before ‘data’
   24 |   return pq->heapArray[0]data;
      |                          ^~~~
      |                          ;
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e900a53
Sat 14 Oct 2023 09:32:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d9ab66a
Sat 14 Oct 2023 09:33:55 PM UTC: 
 heap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:3: error: expected ‘,’ or ‘;’ before ‘pq’
   39 |   pq->size++;
      |   ^~
heap.c:46:45: error: expected ‘;’ before ‘i’
   46 |     pq->heapArray[i] = pq->heapArray[parent]
      |                                             ^
      |                                             ;
   47 |     i = parent
      |     ~                                        
Compilation failed
f81782c
Sat 14 Oct 2023 09:34:09 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:45: error: expected ‘;’ before ‘i’
   46 |     pq->heapArray[i] = pq->heapArray[parent]
      |                                             ^
      |                                             ;
   47 |     i = parent;
      |     ~                                        
Compilation failed
ff3904d
Sat 14 Oct 2023 09:34:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
c36df20
Sat 14 Oct 2023 09:34:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
4c7fd9e
Sat 14 Oct 2023 09:36:53 PM UTC: 
 heap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  7|1
total_score: 45/70
a0fd9f0
Sat 14 Oct 2023 09:37:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
3ede68a
Sat 14 Oct 2023 09:37:26 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
5852748
Sat 14 Oct 2023 09:37:44 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
7b1f004
Sat 14 Oct 2023 09:37:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
601a68f
